upgrade to version 1.23 from original Jenkins plugin and fixed the tests

--- a/src/main/resources/hudson/plugins/copyartifact/Messages.properties
+++ b/src/main/resources/hudson/plugins/copyartifact/Messages.properties
@@ -7,7 +7,7 @@ CopyArtifact.MissingBuild=Unable to find a build for artifact copy from: {0}
 CopyArtifact.MissingProject=Unable to find project for artifact copy: {0}\n\
 This may be due to incorrect project name or permission settings; \
 see help for project name in job configuration.
-CopyArtifact.MissingSrcArtifacts=Unable to access upstream artifacts area. Does source project archive artifacts?
+CopyArtifact.MissingSrcArtifacts=Unable to access upstream artifacts area {0}. Does source project archive artifacts?
 CopyArtifact.MissingSrcWorkspace=Unable to access upstream workspace for artifact copy. Slave node offline?
 CopyArtifact.MissingWorkspace=Unable to access workspace for artifact copy. Slave node offline?
 CopyArtifact.ParameterizedName=Value references a build parameter, so it cannot be validated.
